# FluxGate

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  fluxgate.service  fluxgate.toml.example  install.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/renderer/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  MITM_CA.md  PRODUCT_READINESS.md  SECURITY.md  SELLING_NOTES.md  _config.yml  index.html
examples/: anthropic_python.py  benchmark.sh  openai_python.py
include/fluxgate/: admin_server.h  cache.h  cert_authority.h  config.h  connect_parser.h  filter.h  http_message.h  icache.h  leaf_certificate_cache.h  logger.h  metrics.h  mitm_services.h  mitm_tls.h  pricing.h  proxy_server.h  rate_limiter.h  redis_cache.h  runtime_controls.h  setup_wizard.h  tui.h
src/: admin_server.cpp  cache.cpp  cert_authority.cpp  config.cpp  connect_parser.cpp  filter.cpp  http_message.cpp  leaf_certificate_cache.cpp  logger.cpp  main.cpp  metrics.cpp  mitm_tls.cpp  pricing.cpp  proxy_server.cpp  rate_limiter.cpp  redis_cache.cpp  setup_wizard.cpp  tui.cpp
tests/: integration_tests.cpp  unit_tests.cpp
